# spatial-data

./: .gitignore  README.adoc  features.ttl  pyproject.toml  utils.py
datasets-draft/aac/: aac-metadata.ttl
datasets/aac/: aac-metadata.ttl
datasets/agil/: agil-etl.py  agil-metadata.ttl  test.sparql
datasets/agil/data/: agil.ttl
datasets/agil/scripts/: agil-etl.py
datasets/agil/source/: agil-metadata.ttl  agil20190208.xlsx
datasets/aiatsis-pn/: make_places.py  make_regions.py
datasets/aiatsis-pn/source/: Regions-as-received.xlsx
datasets/apt/: make_dataset.py  make_places.py  make_regions.py
datasets/apt/source/: Places-as-received.csv  Places-reduced8.csv  Regions-IRIs.json  Regions-MS-check.csv  Regions-as-received.xlsx
datasets/asgs-is/: _upload_asgs_is.py  asgs-is-metadata.ttl  make_dataset.py
datasets/asgs-is/source/: _scripts.sh  asgs-is-metadata.ttl
datasets/atns/: atns.py
datasets/atns/source/: Polygons.ttl  atns-metadata.ttl
datasets/austlang/: austlang.nq
datasets/capad/source/: agents.py  capad-authorities.ttl  capad-etl-marine.py  capad-etl-terrestrial.py  capad-metadata.ttl  features-mar.ttl  ipa-discovery.py  make_dataset.py
datasets/fuzzymaps/nola/: etl.py  (+3 more)
datasets/ilm/: ilm-metadata-dataset.ttl  ilm-metadata-resource.ttl
datasets/iloc/: iloc-metadata.ttl
datasets/nntt/: make_dataset.py  nntt-fcs-1of2.ttl  nntt-fcs-2of2.ttl  nntt-metadata.ttl
datasets/nsw-ab/: nsw-ab-etl.py  urbanity.ttl
datasets/ntd/: ntd-metadata.ttl
validation/: validate.py
validation/reports/: agil.ttl  ilm.ttl  nntt.1of2.ttl  nntt.2of2.ttl
(+42 files in other folders)
