[tool.poetry]
name = "Spatial Data ETL"
version = "0.0.1"
description = "Indigenous Data Network's spatial data extract, transform & load scripts"
authors = ["Nicholas Car <nick@kurrawong.net>"]
license = "CC-BY 4.0"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
pandas = "^1.4.4"
pyshacl = "^0.20.0"
openpyxl = "^3.0.10"
shapely = "^1.8.5"
geopandas = "^0.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
